<?xml version="1.0"?>
<package format="2">
  <name>react_ros</name>
  <version>0.0.0</version>
  <description>The REACT ROS package</description>
  <maintainer email="phuoc.nguyen@aalto.fi">Phuoc Nguyen</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>react</depend>
  <depend>hydra_seg_ros</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <export>
  </export>
</package>
